feat - Add Component SearchBar
* Remove sample component

--- a/src/renderer/styles/bulma/sass/layout/section.sass
+++ b/src/renderer/styles/bulma/sass/layout/section.sass
@@ -2,7 +2,7 @@
 @import "../utilities/variables.sass"
 
 .section
-  background-color: $white
+  //background-color: $white
   padding: 40px 20px
   // Responsiveness
   +desktop
