feat - Initial config screen
* save config.json
* save items-${lang}.json
* create new config.json if it did not exist
  * ask executable path
  * ask language
* create new items-${lang}.json if it did not exist
* skip initial config screen if there was config.json

--- a/src/renderer/styles/index.sass
+++ b/src/renderer/styles/index.sass
@@ -1,6 +1,41 @@
 @charset "utf-8"
 
-@import "variables.sass"
-@import "bulma/bulma"
+@import "utilities/variables"
 
+@import "bulma/sass/base/minireset"
+@import "bulma/sass/base/generic"
+@import "bulma/sass/base/helpers"
+
+@import "bulma/sass/elements/box"
+@import "bulma/sass/elements/button"
+@import "elements/content"
+@import "bulma/sass/elements/form"
+@import "bulma/sass/elements/image"
+@import "bulma/sass/elements/notification"
+@import "elements/progress"
+@import "bulma/sass/elements/table"
+@import "bulma/sass/elements/title"
+@import "bulma/sass/elements/other"
+
+@import "bulma/sass/components/card"
+@import "bulma/sass/components/highlight"
+@import "bulma/sass/components/level"
+@import "bulma/sass/components/media"
+@import "bulma/sass/components/menu"
+@import "bulma/sass/components/message"
+@import "bulma/sass/components/modal"
+@import "bulma/sass/components/nav"
+@import "bulma/sass/components/pagination"
+@import "bulma/sass/components/panel"
+@import "bulma/sass/components/tabs"
+
+@import "bulma/sass/grid/columns"
+@import "bulma/sass/grid/tiles"
+
+@import "bulma/sass/layout/hero"
+@import "bulma/sass/layout/section"
+@import "bulma/sass/layout/footer"
+
+@import "font-awesome.scss"
 @import "../components/search-bar"
+@import "../containers/inquirer"
