feat - Search items using index

--- a/src/renderer/styles/utilities/variables.sass
+++ b/src/renderer/styles/utilities/variables.sass
@@ -1,4 +1,9 @@
-$body-background: #323b4b
+$base: #2A535E
+$base-alt-1: #323b4b
+$base-alt-2: #242831
+$primary: #F26C67
+
+$body-background: $base
 
 $black: hsl(222, 65%, 17%)
 $black-bis: hsl(224, 34%, 23%)
@@ -6,7 +11,7 @@ $black-ter: hsl(214, 23%, 26%)
 
 $grey-darker: hsl(199, 24%, 19%)
 $grey-dark: hsl(200, 24%, 28%)
-$grey: hsl(206, 15%, 43%)
+$grey: hsl(205, 15%, 49%)
 $grey-light: hsl(185, 12%, 66%)
 $grey-lighter: hsl(192, 17%, 82%)
 
@@ -33,6 +38,15 @@ $family-sans-serif: "Roboto", sans-serif
 //$family-monospace: "Inconsolata", "Consolas", "Monaco", monospace
 $family-monospace: "Droid Sans Mono", "Inconsolata", "Consolas", "Monaco", monospace
 //$family-monospace: "Roboto Mono", monospace
+
+$size-1: 48px
+$size-2: 40px
+$size-3: 28px
+$size-4: 24px
+$size-5: 18px
+$size-6: 14px
+
+$size-7: 12px
 
 $weight-title-normal: normal
 $weight-title-bold: bold
