--- a/src/renderer/styles/index.sass
+++ b/src/renderer/styles/index.sass
@@ -33,9 +33,9 @@
 @import "bulma/sass/grid/tiles"
 
 @import "bulma/sass/layout/hero"
-@import "bulma/sass/layout/section"
+@import "layout/section"
 @import "bulma/sass/layout/footer"
 
 @import "font-awesome.scss"
-@import "../components/search-bar"
 @import "../containers/inquirer"
+@import "../containers/search-box"
