--- a/src/renderer/styles/elements/progress.sass
+++ b/src/renderer/styles/elements/progress.sass
@@ -15,7 +15,7 @@
     background-color: $border
   &::-webkit-progress-value
     background-color: $text
-    transition: width 1s ease
+    transition: width .6s linear
   &::-moz-progress-bar
     background-color: $text
   // Colors
