--- a/src/renderer/styles/index.sass
+++ b/src/renderer/styles/index.sass
@@ -3,19 +3,19 @@
 @import "utilities/variables"
 
 @import "bulma/sass/base/minireset"
-@import "bulma/sass/base/generic"
+@import "base/generic"
 @import "bulma/sass/base/helpers"
 
 @import "bulma/sass/elements/box"
-@import "bulma/sass/elements/button"
+@import "elements/button"
 @import "elements/content"
-@import "bulma/sass/elements/form"
+@import "elements/form"
 @import "bulma/sass/elements/image"
 @import "bulma/sass/elements/notification"
 @import "elements/progress"
 @import "bulma/sass/elements/table"
 @import "bulma/sass/elements/title"
-@import "bulma/sass/elements/other"
+@import "elements/other"
 
 @import "bulma/sass/components/card"
 @import "bulma/sass/components/highlight"
@@ -37,5 +37,8 @@
 @import "bulma/sass/layout/footer"
 
 @import "font-awesome.scss"
+@import "../components/titlebar"
+@import "../components/exe-path-field"
+@import "../containers/preferences"
 @import "../containers/inquirer"
 @import "../containers/search-box"
