--- a/src/renderer/styles/utilities/variables.sass
+++ b/src/renderer/styles/utilities/variables.sass
@@ -1,10 +1,16 @@
+@import "../bulma/sass/utilities/functions"
+
+$titlebar-height: 43px
+
 $base: #2A535E
 $base-alt-1: #323b4b
 $base-alt-2: #242831
-$primary: #F26C67
 
-$body-background: $base
+////////////////////////////////////////////////
+////////////////////////////////////////////////
+// 1. Initial variables
 
+// Colors
 $black: hsl(222, 65%, 17%)
 $black-bis: hsl(224, 34%, 23%)
 $black-ter: hsl(214, 23%, 26%)
@@ -27,6 +33,7 @@ $blue: hsl(217, 71%, 53%)
 $purple: hsl(271, 100%, 71%)
 $red: hsl(348, 100%, 61%)
 
+// Typography
 // TODO: remove unused fonts later
 //$family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $family-serif: "Droid Serif", serif
@@ -45,8 +52,96 @@ $size-3: 28px
 $size-4: 24px
 $size-5: 18px
 $size-6: 14px
-
 $size-7: 12px
 
+$weight-normal: 400
+$weight-bold: 700
 $weight-title-normal: normal
 $weight-title-bold: bold
+
+// Miscellaneous
+$easing: ease-out
+$radius-small: 2px
+$radius: 3px
+$radius-large: 5px
+$speed: 86ms
+
+////////////////////////////////////////////////
+////////////////////////////////////////////////
+// 2. Primary colors
+
+$primary: #F26C67
+
+$info: $blue
+$success: $green
+$warning: $yellow
+$danger: $red
+
+$light: $white-ter
+$dark: $grey-darker
+
+////////////////////////////////////////////////
+////////////////////////////////////////////////
+// 3. Applied variables
+
+// Invert colors
+$primary-invert: findColorInvert($primary)
+
+$info-invert: findColorInvert($info)
+$success-invert: findColorInvert($success)
+$warning-invert: findColorInvert($warning)
+$danger-invert: findColorInvert($danger)
+
+$light-invert: $dark
+$dark-invert: $light
+
+// General colors
+$body-background: $base
+
+$background: $white-ter
+
+$border: $grey-lighter
+$border-hover: $grey-light
+
+// Text colors
+$text: $grey-dark
+$text-invert: findColorInvert($text)
+$text-light: $grey
+$text-strong: $grey-darker
+
+// Code colors
+$code: $grey
+$code-background: $background
+
+$pre: $text
+$pre-background: $background
+
+// Link colors
+$link: $primary
+$link-invert: $primary-invert
+$link-visited: $purple
+
+$link-hover: $grey-darker
+$link-hover-background: $white-ter
+$link-hover-border: $grey-darker
+
+$link-active: $grey-darker
+$link-active-border: $grey-darker
+
+// Typography
+$family-primary: $family-sans-serif
+$family-code: $family-monospace
+
+$size-small: $size-7
+$size-normal: $size-6
+$size-medium: $size-5
+$size-large: $size-3
+$size-huge: $size-1
+
+////////////////////////////////////////////////
+////////////////////////////////////////////////
+// 4. Lists and maps
+
+$colors: (white: ($white, $black), black: ($black, $white), light: ($light, $light-invert), dark: ($dark, $dark-invert), primary: ($primary, $primary-invert), info: ($info, $info-invert), success: ($success, $success-invert), warning: ($warning, $warning-invert), danger: ($danger, $danger-invert))
+
+$sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6
